# pelite

./: .gitignore  .travis.yml  Cargo.toml  OpenCppCoverage.cfg  appveyor.yml  azure-pipelines.yml  changelog.md  license.txt  readme.md  rustfmt.toml
.github/workflows/: ci.yml
ci/azure-pipelines/: generic.yml  linux.yml  windows.yml
demo/: Demo.def  Demo64-pe.txt  Demo64.def  demo-rtti.txt  readme.md
examples/: extract-icons.rs  imphash.rs  markovbin.rs  readme.rs  version_info.rs
examples/apex/: classes.rs  concommands.rs  convars.rs  cvars.rs  datamaps.rs  globals.rs  interfaces.rs  kbuttons.rs  main.rs  misc.rs  recvtables.rs  stdout.md  stdout.txt
examples/apisetschema/: image.rs  main.rs  win10.rs  win7.rs
examples/csgo/: classes.rs  cvars.rs  datamaps.rs  interfaces.rs  kbutton.rs  main.rs  readme.md  recvtables.rs  stdout.md  stdout.txt  weapondata.rs
examples/mordhau/: main.rs  stdout.md
examples/ow/: globals.rs  main.rs  misc.rs  stdout.md  stdout.txt  strings.rs
examples/pubg/: main.rs
examples/tf2/: classes.rs  cvars.rs  interfaces.rs  main.rs  readme.md  stdout.txt
examples/tf2-dyn/: main.rs  util.rs
macros/: Cargo.toml
macros/src/: lib.rs
pattern/: Cargo.toml
peclite/: Cargo.toml  peclite.h
peclite/src/: lib.rs
proc-macros/: Cargo.toml  lib.rs  readme.md
sigscanpro/: Cargo.toml  readme.md  sigscanpro.h
sigscanpro/src/: lib.rs  pe32.rs  pe64.rs
sigscanpro/tests/: demo.rs
src/: base_relocs.rs  error.rs  image.rs  lib.rs  pattern.rs  pefile.rs  pir.rs  pod.rs  rich_structure.rs  security.rs  stringify.rs  strings.rs  tests.rs
src/apps/: findsig.rs  imphash.rs  mod.rs  module_def.rs
src/mmap/: mod.rs  unix.rs  windows.rs
src/pe/: file.rs  guid.rs  image.rs  mod.rs  stringify.rs  strings.rs  tests.rs
src/pe/pe32/: image.rs  macros.rs  mod.rs
src/pe/pe64/: debug.rs  exception.rs  exports.rs  headers.rs  image.rs  macros.rs  pe.rs  resources.rs  scanner.rs  view.rs
src/pe/resources/: art.rs  find.rs  mod.rs  version_info.rs
src/pe32/: image.rs  macros.rs  mod.rs  msvc.rs
src/pe64/: base_relocs.rs  debug.rs  exception.rs  exports.rs  file.rs  headers.rs  image.rs  imports.rs  load_config.rs  macros.rs  mmap_windows.rs  mod.rs  msvc.rs  pe.rs  ptr.rs  resources.rs  rich_header.rs  rich_structure.rs  scanner.rs  security.rs  tls.rs  view.rs
src/proc-macros/: Cargo.toml  lib.rs  pattern.rs
src/resources/: art.rs  find.rs  group.rs  mod.rs  string_table.rs  version_info.rs
src/util/: align.rs  annotate.rs  c_str.rs  guid.rs  iter.rs  mod.rs  offset.rs  offset_of.rs  pod.rs  serde_helper.rs  slice_len.rs  string_n.rs  wide_str.rs
src/wrap/: debug.rs  exports.rs  file.rs  headers.rs  imports.rs  load_config.rs  mod.rs  pe.rs  scanner.rs  sections.rs  tls.rs  view.rs
tests/: demo64.rs  edges.rs  hello.rs  ipoverusbsvc.rs  mmap.rs  patterns.rs  samples.rs  tiny.rs
tests/pocs/: blob  pocs.blob  pocs.rs  readme.md
tests/tiny/: tiny.128  tiny.168  tiny.296  tiny.356  tiny.97  tiny.c.1024  tiny.c.468  tiny.import.161  tiny.import.209  tiny.webdav.133
wasm/: .gitignore  Cargo.toml  build.bat  pelite.js  playground.html  readme.md
wasm/src/: base_relocs.rs  headers.rs  lib.rs  resources.rs  scanner.rs  wasm.rs
