[package]
name = "pelite"
version = "0.6.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]

description = "Lightweight, memory-safe, zero-allocation library for reading and navigating PE binaries."

documentation = "https://docs.rs/pelite/"
repository = "https://github.com/CasualX/pelite"

readme = "readme.md"

keywords = ["exe", "dll", "mui", "bin", "pe"]
categories = ["parsing", "command-line-utilities"]

license = "MIT"

[features]
unsafe_alignment = []

[badges]
appveyor = { repository = "CasualX/pelite", branch = "master", service = "github" }

[profile.release]
lto = true
opt-level = 2

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "memoryapi", "handleapi"] }

[dev-dependencies]
rand = "0.5"
lde = "0.3"
