[package]
name = "pelite"
version = "0.7.1"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"

description = "Lightweight, memory-safe, zero-allocation library for reading and navigating PE binaries."

documentation = "https://docs.rs/pelite/"
repository = "https://github.com/CasualX/pelite"

readme = "readme.md"

keywords = ["exe", "dll", "mui", "bin", "pe"]
categories = ["parser-implementations", "command-line-utilities"]

license = "MIT"

[workspace]
members = [".", "./src/proc-macros"]

[features]
default = ["mmap"]
unsafe_alignment = []
mmap = ["libc", "winapi"]
unstable = []

[badges]
appveyor = { repository = "CasualX/pelite", branch = "master", service = "github" }
travis-ci = { repository = "CasualX/pelite", branch = "master", service = "github" }
maintenance = { state = "actively-developed" }

[profile.release]
lto = true
opt-level = 2

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-pc-windows-msvc"

[dependencies]
pelite-macros = { path = "src/proc-macros", version = "0.1.0" }
serde = { version = "1.0", optional = true, features = ["derive"] }
data-encoding = { version = "2.1", optional = true }

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2", optional = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", optional = true, features = ["fileapi", "memoryapi", "handleapi"] }

[dev-dependencies]
rand = "0.5"
lde = "0.3"
