[package]
name = "pelite-pattern"
version = "0.1.0"
authors = ["Casper <CasualX@users.noreply.github.com>"]
edition = "2018"

description = "Implements pattern matching for the pelite crate."
documentation = "https://docs.rs/pelite/"
repository = "https://github.com/CasualX/pelite"
license = "MIT"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = []
